# farvm

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/std/: Cargo.toml
crates/std/src/: lib.rs
crates/tree/: Cargo.toml
crates/tree/src/: lexer_v1.rs  lib.rs  parser_v1.rs
crates/utils/: Cargo.toml
crates/utils/src/: diag.rs  lib.rs  pool.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs
src/: main.rs
src/machine/: mod.rs
src/tree/: mod.rs  node.rs  token.rs
